cambios hechos, ahora el api.yaml se puede probar, solo falta la autorizacion
